# demos

./: .gitignore  LICENSE  README.md  __init__.py  demo_pipeline.py  env.template  lcel_components.py  mock_llm.py  performance_demo.py  pipeline_results.md  pyproject.toml  requirements.txt  run_demo.py  sample_data.py  tongyi_llm.py  业务流程文档.md  技术架构文档.md
demo/: llm_dashscope.py  llm_tongyi.py
text_pipeline/: __init__.py  components.py  llm_manager.py  main.py  pipeline.py  sample_data.md
utils/: demo_pipeline.py
